# didge-lab

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  build-and-release.yml  test-workflow.yml
assets/correction_models/: 2024-03-18-linear-regression.joblib
doc/: README.md  release.md
doc/examples/: conv_documentation.ipynb  evolution_callbacks.ipynb  kigali_shape_parameters.ipynb  loss_functions.ipynb  visualize_didgeridoos.ipynb
doc/examples/loss/: 00_overview.ipynb  01_frequency_tuning.ipynb  02_scale_tuning.ipynb  03_peak_quantity.ipynb  04_peak_amplitude.ipynb  05_q_factor.ipynb  06_modal_density.ipynb  07_integer_harmonic.ipynb  08_near_integer.ipynb  09_stretched_odd.ipynb  10_high_inharmonic.ipynb  11_harmonic_splitting.ipynb  12_full_example.ipynb  README.md
doc/examples/tutorials/: tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb
doc/simulation_methods/acoustical_simulation/: 1d_fem.md  transmission_line_model.md
examples/: acoustical_simulations.ipynb
src/: README.md  _pyproject.toml  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py  test_didgelab_installation.py
src/didgelab/: __init__.py  _version.py  acoustical_simulation.py  analysis.py  app.py  conv.py  fft.py  geo.py  visualize.py
src/didgelab/calc/: conv.py  correction_models.py  fft.py  geo.py
src/didgelab/calc/sim/: _cadsd.c  sim.py
src/didgelab/evo/: __init__.py  __main__.py  callbacks.py  evolution.py  genome.py  loss.py  nuevolution.py  operators.py  schedulers.py  writer.py
src/didgelab/evo/log/: loss_writer.py
src/didgelab/loss/: TairuaLoss.py  __init__.py  loss.py
src/didgelab/shapes/: KigaliShape.py  MbeyaShape.py
src/didgelab/sim/: fem.py  sim_interface.py  tlm_cython.py  tlm_python.py
src/didgelab/sim/tlm_cython_lib/: README.md  _cadsd.c  _cadsd.pyx  cadsd.py  sim.py
src/didgelab/sim/tlm_cython_lib/pytorch/: sgd_cadsd.py
src/didgelab/util/: didge_visualizer.py
src/experiments/Tamaki/: Black Euca.ipynb  NewTamaki.ipynb  OldTamaki.ipynb  analyze_result.ipynb  eval_results.ipynb  evolve_tamaki3.py
src/experiments/Tamaki/tamaki/: Tamaki_0-geo_sound_file.mp3.asd  Tamaki_0_geo_dimensions.txt  paul_v2.mp3.asd  paul_v2.txt  pauls_sample_short.wav.asd  tamaki2_zunge_hinten.mp3.asd  tamaki2_zunge_hinten.wav.asd  tamaki2_zunge_vorne.mp3.asd  tamaki2_zunge_vorne.wav.asd  tamaki_highcut.mp3.asd  tamaki_highcut.wav.asd  tamaki_vorlage.mp3.asd  tamaki_vorlage_short.wav.asd
src/experiments/analyze_database/: hell_dunkel.ipynb
src/experiments/arusha/: analyze2.ipynb  analyze3.ipynb  analyze_evolution.ipynb  arusha_shape.ipynb  eval_results.ipynb  evolve_arusha.py  evolve_arusha_test.py  test.ipynb  tune_arusha.ipynb  visualize.ipynb
src/experiments/bended_analysis/: analysis.ipynb  fft_didge_archive.ipynb
src/experiments/bended_analysis/samples/: arusha.wav.asd
src/experiments/correction_term/: Correction Terms.ipynb  Create Correction Terms.ipynb
src/experiments/fem/: 1dfem.ipynb  2dfem.ipynb  curve.ipynb  curve2.ipynb
src/experiments/finite_elements/: .X99-lock  1_generate_mesh_in_python_with_gmsh (1).ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  gmsh_mesh.ipynb  mesh.vtu
src/experiments/finite_elements/.Trash-0/files/: meshes (1).ipynb
src/experiments/finite_elements/.Trash-0/info/: Untitled.ipynb.trashinfo  (+1 more)
src/experiments/finite_elements/gmesh/: jsdokken.py  test2.py
src/experiments/finite_elements/out_helmholtz/: plane_wave.h5
src/experiments/finite_elements/working_parts/: create_mesh.ipynb
src/experiments/first_evolution/: Analyze Shape.ipynb
src/experiments/giseni/: evolve_giseni.ipynb
src/experiments/kigali/: compute_printing_costs.ipynb  evolve_kigali.ipynb
src/experiments/simulate_evolution/: analyze_result.ipynb  simulation.py
src/experiments/soniccopy/: soniccopy.ipynb
src/experiments/spline_shape/: EvolvingShape.ipynb  EvolvingShape2.ipynb  EvolvingShape3.ipynb  EvolvingShape4.ipynb  evolve_splines.py
src/experiments/taganga/: EvolvingShape4.ipynb  evolve_taganga.py  taganga.ipynb  test.ipynb
src/experiments/tairua/: _tairua_pop2.ipynb  tairua.py  tairua_1.ipynb  tairua_2.ipynb  tairua_3.ipynb
src/experiments/tairua/results/: best_geo.json  best_geo.txt  original_geo.json
src/experiments/web/: WebShape.ipynb  scales.csv  scales.ipynb
src/slurm/: evolve_arusha.sh  evolve_splines.sh  evolve_taganga.sh  evolve_tamaki3.sh  init.sh
src/tests/: __init__.py  test_KigaliShape.py  test_MbeyaShape.py  test_TairuaLoss.py  test_acoustical_simulation.py  test_conv.py  test_fft.py  test_geo.py  test_loss.py  test_nuevolution.py
