[build-system]
requires = [
    "setuptools >= 61, < 82",  # setuptools 82 removed pkg_resources (used by numpy/build)
    "wheel",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "didgelab"
version = "3.0.8"
authors = [
  { name = "Jan Nehring", email = "jan.nehring@outlook.com" },
]
description = "Acoustical simulation and computer-aided design of didgeridoos"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
license = { text = "CC BY-NC-SA 4.0" }
dependencies = [
    "configargparse==1.5.3",
    "pandas>=2.1.0,<3",  # 2.1+ has Python 3.12 wheels; 1.5.0 builds from source and hits pkg_resources
    "scipy>=1.11.0",  # 1.11+ has Python 3.12 wheels; older versions build from source
    "matplotlib==3.6.1",
    "prettytable==3.4.1",
    "seaborn==0.12.0",
    "tqdm==4.67.3",
    "cython==0.29.32",
    "jsonlines==4.0.0",
    "pytest==8.3.5",
    "scikit-fem==10.0.2",
    "build==1.4.0",
    "twine==6.2.0",
    "setuptools>=61,<82",  # 82 removed pkg_resources; older packages fail to build
]

[project.urls]
Homepage = "https://github.com/didgitaldoo/didge-lab"
Issues = "https://github.com/didgitaldoo/didge-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]
