[build-system]
requires = [
    "setuptools >= 61, < 82", 
    "setuptools_scm[toml] >= 6.2",
    "wheel",
    "numpy",
    "Cython"
]
build-backend = "setuptools.build_meta"

[project]
name = "didgelab"
dynamic = ["version"]
authors = [
  { name = "Jan Nehring", email = "jan.nehring@outlook.com" },
]
description = "Acoustical simulation and computer-aided design of didgeridoos"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC BY-NC-SA 4.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "configargparse==1.5.3",
    "pandas>=2.1.0,<3",
    "scipy>=1.11.0",
    "matplotlib==3.6.1",
    "prettytable==3.4.1",
    "seaborn==0.12.0",
    "tqdm==4.67.3",
    "cython==0.29.32",
    "jsonlines==4.0.0",
    "pytest==8.3.5",
    "scikit-fem==10.0.2",
    "build==1.4.0",
    "twine==6.2.0",
    "setuptools>=61,<82",
]

[project.urls]
Homepage = "https://github.com/didgitaldoo/didge-lab"
Issues = "https://github.com/didgitaldoo/didge-lab/issues"

[tool.setuptools_scm]
# Generates a file so you can check the version in your code:
# import didgelab; print(didgelab.__version__)
write_to = "src/didgelab/_version.py"

[tool.setuptools.packages.find]
where = ["src"]